# minipaw

./: .gitignore  Cargo.toml  README.md  SOUL.md  build.rs  install.sh  minipaw.json.example  work.md
docs/: 2026-05-14-progress-report.md  2026-05-14-tree-advisor-design.md
pawbench/: install_skills.py  run.py  run_with_critic.py  validate_and_promote.py
pawbench/cases/: cases.jsonl  generate.py
pawbench/reports/: advisor_training_report_0516.md  advisor_training_report_0516.zh.md  robot_0_before_training_0510.md
pawbench/tools/: paw.py
pawbench/workspace/prompts/: minihow.charge.md  minihow.compute.md  minihow.md  minihow.scout.md  minihow.transport.md  miniwhat.md
pawbench/workspace/skills/: robot_arm_extend.md  robot_arm_grab.md  robot_arm_release.md  robot_arm_rotate.md  robot_camera_capture.md  robot_camera_describe.md  robot_camera_zoom.md  robot_charge_dock.md  robot_charge_solar.md  robot_charge_status.md  robot_comm_receive.md  robot_comm_send.md  robot_comm_signal_strength.md  robot_food_scan.md  robot_inventory_drop.md  robot_inventory_list.md  robot_inventory_take.md  robot_map_landmark.md  robot_map_locate.md  robot_map_route.md  robot_map_terrain.md  robot_move_back.md  robot_move_stop.md  (+27 more)
prompts/: adjust-meta.md  minihow.md  miniwhy.md
skills/: current-time.md
src/: adjustments.rs  advisor.rs  agent.rs  cli.rs  config.rs  http.rs  lib.rs  llm.rs  main.rs  memory.rs  minicore.rs  orchestration.rs  planner.rs  prompts.rs  rubric.rs  skills.rs  tools.rs  train.rs  types.rs
src/channels/: exec_agent.rs  mod.rs  telegram.rs  telegram_agent.rs
